# DiscordVideoCompressor

./: .gitignore  CMakeLists.txt  README.md
Scripts/: build.ps1  install-ffmpeg.bat  install-ffmpeg.ps1
qml/: DebugConsole.qml  FFmpegInstallDialog.qml  VideoCompressorWindow.qml  VideoControls.qml  VideoListItem.qml  VideoPlayerWindow.qml
src/: clipboardmanager.cpp  clipboardmanager.h  main.cpp  videocompressor.cpp  videocompressor.h  videoplayer.cpp  videoplayer.h
